--- a/index.html
+++ b/index.html
@@ -2,46 +2,31 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>VMPath.net</title>		
+		<title>VMPath.net</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="stylesheet" type="text/css" href="font-awesome.css" />
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
-		
-		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
-		<script type='text/javascript' src='javascripts/jquery.tipsy.js'></script>
-		<script type='text/javascript'>
-		$(function() {
-			$('#tipsy').tipsy({fade: true, gravity: 's'});
-		});
-		</script>
+		<link href='//fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		
+
 	</head>
 	<body>
 		<div class="wrapper">
 			<img src="images/logo.png" alt="VMPath.net" title="VMPath.net - Cloud, Hébergement, Conseil Informatique"/>
 
 			<h1>VMPath.net</h1>
-			<p>Vos services informatiques de qualité arrivent...<br /><a href="mailto:ladenis@vmpath.net?Subject=Contact%20VMPath">ladenis@vmpath.net</a></p>
-			
+			<p><a href="mailto:ladenis@vmpath.net?Subject=Contact%20VMPath">ladenis@vmpath.net</a></p>
+
 			<div id="icon_login">
-			<i class="fa fa-cloud fa-5x" style="color:#45aeff;width:150px;"><p class="icon_titre">Partagez</p></i>
-			<i class="fa fa-users fa-5x" style="color:#17c894;width:150px;"><p class="icon_titre">Communiquez</p></i>
-			<i class="fa fa-lock fa-5x" style="color:#f19410;width:150px;"><p class="icon_titre">En Sécurité</p></i>
+				<i class="fa fa-cloud fa-5x" style="color:#45aeff;width:150px;"><p class="icon_titre">Partagez</p></i>
+				<i class="fa fa-users fa-5x" style="color:#17c894;width:150px;"><p class="icon_titre">Communiquez</p></i>
+				<i class="fa fa-lock fa-5x" style="color:#f19410;width:150px;"><p class="icon_titre">En Sécurité</p></i>
 			</div>
-						
-			<section class="progress">
-				<div class="progress-bar-container" id="tipsy" title="70% Accompli">
-					<article class="progress-bar" style="width:70%"  ></article> 
-				</div>
-				<article class="txt-launch-day-hat"></article>
-			</section>
-			
-			</section><div class="clear"></div>
+
 			<div class="hr"></div>
-			
+
 		</div>
 	</body>
 </html>
